--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://rk18081999.github.io/RkP.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (201) 918 - 0437</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jersey City, NJ, USA</span></li>
                 </ul>
